--- a/CoreJS/ClassWork/Index.html
+++ b/CoreJS/ClassWork/Index.html
@@ -19,9 +19,9 @@
     		fn();
 		}
 		var result = async(function getData() {
-			var d = Math.floor(Math.random()*10)
+			var dat = Math.floor(Math.random()*10)
 			if(d>5){
-				return {data:d}
+				return {data:dat}
 			}
 			else{
 				return {msg:"Error! No. is less than 5"}
