Auth Second Commit

--- a/CoreJS/ClassWork/Index.html
+++ b/CoreJS/ClassWork/Index.html
@@ -24,7 +24,7 @@
 				return {data:dat}
 			}
 			else{
-				return {msg:"Error! No. is less than 5"}
+				return {msg:"Error! Number. is less than 5"}
 			}
 		});
 		console.log(result)
